feat: recurring transactions and initial balance (stable base)